fixed navbar title alignment

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -31,10 +31,10 @@ z-index: 9990;
 margin-right: 10px;
 box-sizing: content-box;
 width: 50px;
-padding: 10px;
+padding: 10px 0;
 height: 100%;
 text-align: right;
-margin-top: 0;
+margin: 0;
 font-weight: normal;
 letter-spacing: 8px;
 
